--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,7 +1,7 @@
 /*
-Template Name: Dashtrans Admin
-Author: codervent
-Email: codervent@gmail.com
+Name: FabVPN - Admin Dashboard
+Author: Sameed
+Email: tecclubx@gmail.com
 File: app.css
 */
 
@@ -32,7 +32,7 @@ body {
 
 	letter-spacing: .5px;
 
-	font-family: Roboto, sans-serif;
+	font-family: "Rubik", sans-serif;
 
 	overflow-x: hidden
 }
