--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -162,33 +162,6 @@ ul {
 			Apex Chart
 	===============================
 */
-.apexcharts-canvas {
-    margin: 0 auto;
-}
-
-.apexcharts-title-text,
-.apexcharts-yaxis-label,
-.apexcharts-xaxis-label {
-    fill: #8edc9e;
-}
-
-.apexcharts-legend-text {
-    color: #8edc9e !important;
-}
-
-.apexcharts-radialbar-track.apexcharts-track .apexcharts-radialbar-area {
-    stroke: #e0e6ed;
-}
-
-.apexcharts-pie-label,
-.apexcharts-datalabel {
-    fill: #fff;
-}
-
-.apexcharts-datalabel-label,
-.apexcharts-datalabel-value {
-    fill: #8edc9e;
-}
 
 @keyframes spin {
     to {
@@ -233,4 +206,7 @@ ul {
     overflow-y: auto !important;
     max-height: 300px !important;
     white-space: pre-wrap;
+}
+.table-box{
+    position: relative;
 }
