feat: Enhance ticket messaging system with media support and UI improvements
- Implemented media attachment functionality in TicketMessage model using Spatie Media Library.
- Updated ticket details view to include a chat-like interface for better user experience.
- Added image upload modal for attaching images to ticket replies.
- Improved CSS styles for chat components, ensuring a responsive and visually appealing layout.
- Enhanced ticket status management with buttons for closing, reopening, and marking tickets as pending.
- Added functionality to copy messages and confirm deletions for both messages and images.
- Updated routes to support detailed ticket views.

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1744,8 +1744,6 @@ a {
 
 .chat-content {
 
-	margin-left: 340px;
-
 	padding: 15px 15px 15px 15px;
 
 }
@@ -1756,7 +1754,7 @@ a {
 
 	height: 70px;
 
-	left: 340px;
+	left: 0px;
 
 	right: 0;
 
@@ -1778,9 +1776,9 @@ a {
 
 	position: absolute;
 
-	height: 70px;
+	/* height: 90px; */
 
-	left: 340px;
+	left: 0px;
 
 	right: 0;
 
@@ -1794,6 +1792,10 @@ a {
 
 	border-bottom-right-radius: 0.25rem;
 
+}
+
+.chat-footer textarea{
+	resize: none;
 }
 
 .chat-footer-menu a {
@@ -1928,15 +1930,42 @@ a {
 
 }
 
+.chat-top-header-menu button {
+
+	display: inline-block;
+
+	width: 40px;
+
+	height: 40px;
+
+	line-height: 40px;
+
+	font-size: 18px;
+
+	color: #ffffff;
+
+	text-align: center;
+
+	border-radius: 50%;
+
+	background-color: rgb(255 255 255 / 14%);
+
+	border: 1px solid rgb(255 255 255 / 20%);
+}
+
 .chat-content {
 
 	position: relative;
 
 	width: auto;
 
-	height: 450px;
+	height: 400px;
 
 	top: 70px;
+
+	overflow-y: scroll;
+
+	scroll-behavior: smooth;
 
 }
 
