--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -41,7 +41,22 @@ a {
 
 	text-decoration: none
 }
+.terminal-output::-webkit-scrollbar {
+	width: 8px;
+}
 
+.terminal-output::-webkit-scrollbar-track {
+	background: #2d2d2d;
+}
+
+.terminal-output::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 4px;
+}
+
+.terminal-output::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
 .wrapper {
 
 	width: 100%;
